# scara-vision-thesis

./: .gitignore  LICENSE  README.md
hardware/: scara_physical_square.csv
hardware/SCARA_pkg/: setup.py
hardware/SCARA_pkg/SCARA_pkg/: calibrateauto.py  ikpos.py  scara_correction.json  scara_offset.json  scara_place_positions.json  scara_workspace.json  steppertest.py
hardware/can_driver/can_driver/: can_driver.py
hardware/testing_can/: setup.py
hardware/testing_can/testing_can/: keyboard_solenoid_test.py  testing_solenoid.py
hardware/yolo_pick_place/: setup.py
hardware/yolo_pick_place/launch/: camera_yolo.launch.py  webcamtest.launch.py
hardware/yolo_pick_place/yolo_pick_place/: camcal.py  resultplot.py  yolopickplace.py  yolotest.py
software/scara_sim/: CMakeLists.txt  package.xml
software/scara_sim/config/: controllers.yaml  scara.rviz
software/scara_sim/launch/: sim.launch.py
software/scara_sim/meshes/: base_link.STL  link_0.STL  link_1.STL
software/scara_sim/urdf/: scara.urdf.xacro
software/scara_trajectory/: package.xml  setup.cfg  setup.py
software/scara_trajectory/scara_trajectory/: color_cube_visualizer.py  home_position.py  ik_to_rviz_controller.py  pick_place_demo.py  plot_results.py  plot_twin.py  plot_twin_xy.py  recorder.py  square_demo.py  twin_recorder.py
